fix Google Translater link mobile & fix header button

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -346,11 +346,7 @@
 
       <div class="menu-mob__drop-wrap" *ngIf="isAuthenticated">
         <a class="menu-mob__link menu-mob__link--drop" (click)="toggleMenuDropdowns(TRANSLATE_FLAG)" [ngClass]="{'menu-mob__link--active': translateList}">
-          <span class="menu-mob__link-text">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M14.4 2.4H7.10399L6.40001 0H1.60001C0.719999 0 0 0.719999 0 1.60001V12C0 12.88 0.719999 13.6 1.60001 13.6H7.19999L7.99998 16H14.4C15.28 16 16 15.28 16 14.4V4.00001C16 3.12 15.28 2.4 14.4 2.4ZM4.13201 10.068C2.328 10.068 0.863999 8.59998 0.863999 6.79998C0.863999 4.99998 2.33201 3.53197 4.13201 3.53197C4.96402 3.53197 5.72002 3.82796 6.32002 4.38397L6.37203 4.43598L5.39602 5.37997L5.34802 5.33598C5.12002 5.11998 4.72402 4.86798 4.13201 4.86798C3.084 4.86798 2.232 5.736 2.232 6.804C2.232 7.87199 3.084 8.74001 4.13201 8.74001C5.22802 8.74001 5.70401 8.03999 5.832 7.57199H4.06398V6.33198H7.22399L7.23599 6.38797C7.26798 6.55597 7.27998 6.70398 7.27998 6.87198C7.27601 8.75598 5.98398 10.068 4.13201 10.068ZM8.53998 7.25999H11.736C11.736 7.25999 11.464 8.31198 10.488 9.44801C10.06 8.95601 9.76398 8.47601 9.57599 8.09201H8.78399L8.53998 7.25999ZM9.91199 10.068L9.484 10.492L8.96002 8.70802C9.22799 9.18798 9.55199 9.64799 9.91199 10.068ZM15.2 14.4C15.2 14.84 14.84 15.2 14.4 15.2H8.80001L10.4 13.6L9.748 11.388L10.484 10.6519L12.632 12.7999L13.216 12.216L11.052 10.068C11.772 9.23996 12.332 8.26796 12.584 7.26397H13.6V6.432H10.692V5.59998H9.85998V6.432H8.29199L7.33998 3.19999H14.4C14.84 3.19999 15.2 3.55998 15.2 3.99997V14.4Z" fill="#AAB1C4"/>
-            </svg>
-          </span></a>
+          <span class="menu-mob__link-text">Google Translater</span></a>
           <div class="menu-mob__wrap-links" [ngClass]="{'d-none': !translateList}">
             <a class="menu-mob__link">
               <ng-template [ngTemplateOutlet]="translateTemplate">
@@ -368,43 +364,6 @@
 
         <span class="menu-mob__link-text">Order history</span>
       </a>
-        <!--<div class="menu-mob__drop-wrap" *ngIf="isAuthenticated">
-          <a class="menu-mob__link menu-mob__link--drop" (click)="toggleMenuDropdowns(ORDERS_FLAG)" [ngClass]="{'menu-mob__link--active': showOrdersList}"
-             routerLink="/orders/open">
-            <span class="menu-mob__link-icon">
-              <svg width="12" height="14" viewBox="0 0 12 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect width="10.9375" height="14" fill="black" fill-opacity="0" transform="translate(0.5)"/>
-                <path
-                  d="M2.41406 5.46875C2.56499 5.46875 2.6875 5.34624 2.6875 5.19531C2.6875 5.04439 2.56499 4.92188 2.41406 4.92188C2.26314 4.92188 2.14062 5.04439 2.14062 5.19531C2.14062 5.34624 2.26314 5.46875 2.41406 5.46875Z"
-                  fill="white"/>
-                <path
-                  d="M10.6172 1.64062H9.79688V0.820312C9.79688 0.367966 9.42891 0 8.97656 0H4.28113C4.06377 0 3.85388 0.0875854 3.70114 0.240326L0.740326 3.20103C0.589615 3.35175 0.5 3.5611 0.5 3.78113V11.375C0.5 11.8273 0.867966 12.1953 1.32031 12.1953H2.14062V13.1797C2.14062 13.632 2.50859 14 2.96094 14H10.6172C11.0695 14 11.4375 13.632 11.4375 13.1797V2.46094C11.4375 2.00859 11.0695 1.64062 10.6172 1.64062ZM3.78125 0.93364V3.28125H1.43353L3.78125 0.93364ZM1.32031 11.6484C1.16949 11.6484 1.04688 11.5258 1.04688 11.375V3.82812H4.05469C4.20572 3.82812 4.32812 3.70572 4.32812 3.55469V0.546875H8.97656C9.12738 0.546875 9.25 0.669495 9.25 0.820312V11.375C9.25 11.5258 9.12738 11.6484 8.97656 11.6484H1.32031ZM10.8906 13.1797C10.8906 13.3305 10.768 13.4531 10.6172 13.4531H2.96094C2.81012 13.4531 2.6875 13.3305 2.6875 13.1797V12.1953H8.97656C9.42891 12.1953 9.79688 11.8273 9.79688 11.375V2.1875H10.6172C10.768 2.1875 10.8906 2.31012 10.8906 2.46094V13.1797Z"
-                  fill="white"/>
-                <path
-                  d="M7.88281 1.64062H5.69531C5.54428 1.64062 5.42188 1.76303 5.42188 1.91406V3.55469C5.42188 3.70572 5.54428 3.82812 5.69531 3.82812H7.88281C8.03384 3.82812 8.15625 3.70572 8.15625 3.55469V1.91406C8.15625 1.76303 8.03384 1.64062 7.88281 1.64062ZM7.60938 3.28125H5.96875V2.1875H7.60938V3.28125Z"
-                  fill="white"/>
-                <path
-                  d="M7.88281 4.92188H3.50781C3.35678 4.92188 3.23438 5.04428 3.23438 5.19531C3.23438 5.34634 3.35678 5.46875 3.50781 5.46875H7.88281C8.03384 5.46875 8.15625 5.34634 8.15625 5.19531C8.15625 5.04428 8.03384 4.92188 7.88281 4.92188Z"
-                  fill="white"/>
-                <path
-                  d="M7.88281 6.5625H2.41406C2.26303 6.5625 2.14062 6.68491 2.14062 6.83594C2.14062 6.98697 2.26303 7.10938 2.41406 7.10938H7.88281C8.03384 7.10938 8.15625 6.98697 8.15625 6.83594C8.15625 6.68491 8.03384 6.5625 7.88281 6.5625Z"
-                  fill="white"/>
-                <path
-                  d="M7.88281 8.20312H2.41406C2.26303 8.20312 2.14062 8.32553 2.14062 8.47656C2.14062 8.62759 2.26303 8.75 2.41406 8.75H7.88281C8.03384 8.75 8.15625 8.62759 8.15625 8.47656C8.15625 8.32553 8.03384 8.20312 7.88281 8.20312Z"
-                  fill="white"/>
-                <path
-                  d="M7.88281 9.84375H2.41406C2.26303 9.84375 2.14062 9.96616 2.14062 10.1172C2.14062 10.2682 2.26303 10.3906 2.41406 10.3906H7.88281C8.03384 10.3906 8.15625 10.2682 8.15625 10.1172C8.15625 9.96616 8.03384 9.84375 7.88281 9.84375Z"
-                  fill="white"/>
-              </svg>
-
-            </span>
-            <span class="menu-mob__link-text">{{'Orders' | translate}}</span>
-          </a>
-          <div class="menu-mob__wrap-links" *ngIf="showOrdersList">
-            <a class="menu-mob__link" (click)="mobileLinkClick()" routerLink="/orders/open">{{'Open orders' | translate}}</a>
-            <a class="menu-mob__link" (click)="mobileLinkClick()" routerLink="/orders/closed">{{'Orders history' | translate}}</a>
-          </div>
-        </div>-->
 
         <a class="menu-mob__link" href="http://support.exrates.me" target="blank"><span
           class="menu-mob__link-text">{{'Support' | translate}}</span>
