--- a/src/assets/scss/components/_select.scss
+++ b/src/assets/scss/components/_select.scss
@@ -241,12 +241,12 @@
 
 .table__cell{
   .select__list-item-icon{
-    width: 21px;
-    height: 15px;
+    // width: 21px;
+    height: 14px;
     margin-right: 8px;
     vertical-align: middle;
     line-height: 1.5;
-    padding-bottom: 4px;
+    // padding-bottom: 4px;
   }
 }
 /*--- media start ---*/
