--- a/src/assets/scss/pages/ieo/_ieo-notification.scss
+++ b/src/assets/scss/pages/ieo/_ieo-notification.scss
@@ -6,7 +6,7 @@
 	z-index: 9999;
 	transform: translateY(-105%);
 	pointer-events: none;
-	transition:.3s;
+	transition: all .3s, top 0s;
 	&.active{
 		transform: translateY(0);
 		pointer-events: auto;
@@ -45,6 +45,9 @@
 		}
 		p{
 			padding-top: 2px;
+			br{
+				display: none;
+			}
 		}
 	}
 	.ieo-notification-icon{
@@ -65,4 +68,67 @@
 		}			
 	}
 
+}
+
+app-notifications-list{
+	position: relative;
+	@media(min-width: 1200px){
+		.ieo-notifications{
+			position: absolute;
+			left: auto;
+			right: 12px;
+			top: 12px;
+			min-width: 320px;
+			border-radius: 4px;
+			transform: translateY(0);
+			transform: translateX(105%);
+			&.active{
+				transform: translateX(0);
+			}
+
+			.notification__btn{
+				padding: 0;
+				width: 9px;
+				height: 9px;
+				position: absolute;
+				right: 12px;
+				margin-right: 0;
+				top: 12px;
+				svg{
+					padding: 0;
+					width: 9px;
+					height: 9px;
+					margin-right: 0;
+					
+				}
+			}
+			.ieo-notification-wr{
+				padding: 22px;
+				padding-right: 40px;
+				justify-content: flex-start;
+				p{
+					line-height: 1.3;
+					br{
+						display: block;
+					}
+				}
+				.ieo-notification-icon{
+					margin-right: 19px;
+					width: 32px;
+					height: 32px;
+				}
+			}
+		}
+	}
+}
+
+.ieo-page-header{
+	app-notifications-list{
+	.ieo-notifications{
+		@media(min-width: 1200px){
+			position: fixed;
+			top: 58px;
+		}
+}
+}
 }
