--- a/src/assets/scss/pages/_balance.scss
+++ b/src/assets/scss/pages/_balance.scss
@@ -767,3 +767,25 @@
     }
   }
 }
+
+.balance-ieo{
+  .table{
+    margin-bottom: 17px;
+  }
+  .ieo-b-d-button-wr{
+    width: 100%;
+    margin-top: 22px;
+    .btn{
+      &.btn-green{
+        background-color: #00B43D;
+        border: 1px solid #00B43D;
+        &:hover{
+          background-color:  #00CA45;
+          border: 1px solid  #00CA45;
+        }
+      }
+    }
+  }
+
+
+}
