--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -20,7 +20,11 @@
     [ieoLoading]="ieoLoading"
   ></app-ieo-info>
 
-  <app-ieo-community [community]="ieoData.community"></app-ieo-community>
+  <app-ieo-community
+    *ngIf="ieoData.community && ieoData.community.length"
+    [community]="ieoData.community"
+  >
+  </app-ieo-community>
 
   <app-ieo-requirements
     [isAuthenticated]="isAuthenticated"
@@ -32,13 +36,11 @@
 
   <app-ieo-descriptions [description]="ieoData.description"></app-ieo-descriptions>
 
-  <app-popup-notification
+  <app-popup-failed
     *ngIf="showNoReqs"
     (close)="closeNoReqs()"
-    header="Ошибка верификации"
-    line1="проверьте верификацию и согласитесь с правилами"
-    btnText="Ок"
-  ></app-popup-notification>
+    [requirements]="requirements"
+  ></app-popup-failed>
   <app-popup-buy
     [IEOData]="IEOData"
     *ngIf="showBuy"
