--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -6,6 +6,7 @@
       [currentStage]="currentStage"
       [isAuthenticated]="isAuthenticated"
       [ieoLoading]="ieoLoading"
+      [requirements]="requirements"
       (onLogin)="onLogin()"
       (onBuy)="onBuy()"
     ></app-ieo-header>
@@ -18,6 +19,7 @@
     (onBuy)="onBuy()"
     [IEOData]="IEOData"
     [ieoLoading]="ieoLoading"
+    [requirements]="requirements"
   ></app-ieo-info>
 
   <app-ieo-community
@@ -39,7 +41,7 @@
   <app-popup-failed
     *ngIf="showNoReqs"
     (close)="closeNoReqs()"
-    [requirements]="requirements"
+    [IEOData]="IEOData"
   ></app-popup-failed>
   <app-popup-buy
     [IEOData]="IEOData"
