--- a/src/assets/scss/pages/ieo/_ieo-header.scss
+++ b/src/assets/scss/pages/ieo/_ieo-header.scss
@@ -41,7 +41,7 @@
 				margin: 0 .9em;
 			}
 		}
-		
+
 		.logo-wr{
 			margin-left: 16px;
 			svg{
@@ -123,9 +123,12 @@
 			line-height: 1;
 
 			color: #FFFFFF;
-		}		
+		}
 		.ieo-buy-button{
-			margin: 0 1.1em;
+      margin: 0 1.1em;
+      .wrapper-ieo-btn {
+        position: relative;
+      }
 		}
 		.btn-ieo{
 			width: 95px;
@@ -133,12 +136,11 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			
-			
+
 			span{
 				font-size: 14px;
 				line-height: .9;
-				
+
 			}
 			&[disabled]{
 				background: #5E5F74;
