comented isProd chech

--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -152,7 +152,8 @@
             [showNotFoundTip]="existQuberaAccounts"
           ></app-dynamic-input>
         </ng-container>
-        <ng-container *ngIf="isProd">
+        <ng-container >
+          <!-- *ngIf="isProd" -->
           <app-dynamic-input
             *ngSwitchCase="Tab.IEO"
             [value]="currValue"
