--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -85,7 +85,8 @@
             </ng-container>
           </li>
           <li class="menu__item menu__item--with-submenu">
-            <ng-container *ngIf="!isProduction">
+            <ng-container >
+                <!-- *ngIf="!isProduction" -->
               <a class="menu__link menu__link--drop">
                 <span class="menu__link-text">{{'IEO' | translate}}</span>
               </a>
